# tlab-analysis

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: .gitignore  create-hatch-env.sh  devcontainer.json  requirements.txt
.github/workflows/: test.yml
scripts/: release.sh
src/: conftest.py
src/tlab_analysis/: __init__.py  abstract.py  cwpl.py  photo_luminescence.py  trpl.py  utils.py
src/tlab_analysis/apparatus/: __init__.py  streakscope.py
tests/: conftest.py  test_cwpl.py  test_photo_luminescence.py  test_trpl.py  test_utils.py
tests/apparatus/: test_streakscope.py
