[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tlab-analysis"
description = "A data analysis package for Takeuchi Lab"
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
keywords = []
classifiers = []
dependencies = [
  "pandas~=1.5.1",
  "scipy~=1.10.0",
]
dynamic = ["version"]

[project.urls]
Documentation = ""
Homepage = "https://github.com/wasedatakeuchilab/tlab-analysis"

[project.optional-dependencies]
test = [
  "pytest~=7.2.0",
  "pytest-cov~=4.0.0",
  "pytest-describe~=2.0.1",
  "mypy~=0.971",
  "flake8~=6.0.0",
  "isort~=5.12.0",
  "black~=23.1.0",
  "pandas-stubs~=1.5.1",
]
dev = [
  "pre-commit~=3.0.0",
]
doc = []

[tool.hatch.version]
path = "src/tlab_analysis/__init__.py"

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = [
  "numpy.*",
  "scipy.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=tlab_analysis"
testpaths = ["tests"]
