[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tlab-analysis"
description = "A data analysis package for Takeuchi Lab"
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
# keywords = []
# classifiers = []
dependencies = [
  "pandas~=1.5.3",
  "scipy~=1.10.1",
]
dynamic = ["version"]

[project.urls]
Documentation = ""
Homepage = "https://github.com/wasedatakeuchilab/tlab-analysis"

[project.optional-dependencies]
test = [
  "pytest==7.2.2",
  "pytest-cov==4.0.0",
  "pytest-describe==2.1.0",
  "pytest-mock==3.10.0",
  "mypy==1.2.0",
  "flake8==6.0.0",
  "isort==5.12.0",
  "black==23.3.0",
]
stub = [
  "pandas-stubs~=1.5.3",
]
doc = []

[tool.hatch.version]
path = "src/tlab_analysis/__init__.py"

[tool.hatch.envs.test]
features = ["test", "stub"]

[tool.hatch.envs.test.scripts]
test = "scripts/test.sh {args}"
format = "scripts/format.sh {args}"
lint = "scripts/lint.sh {args}"

[tool.hatch.envs.doc]
features = ["doc"]

[tool.hatch.envs.doc.scripts]

[tool.mypy]
strict = true
sqlite_cache = true

[[tool.mypy.overrides]]
module = [
  "numpy.*",
  "scipy.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=tlab_analysis"
